--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,22 @@
 
 </head>
 <body>
-
+<header>
+	<div class="flex-container">
+		<div class="flex-elemment">
+			<h1><a href="" >UIBrush</a></h1>
+        </div>
+            <div class="flex-elemment">
+                <ul>
+                    <li>home</li>
+                    <li>about us</li>
+                    <li>portfolio</li>
+                    <li>services</li>
+                    <li>contact us</li>
+                </ul>
+            </div>
+	</div>
+</header>
 
 <script src="js/libs.min.js"></script>
 <script src="js/common.js">  </script>
